feat:three.js環境追加＆初期化

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <title>three.js</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
   </head>
-  <body>
-    <h1>webpack tutorial</h1>
-    <div><img src="~@imgs/inhtml.png" alt="html" /></div>
-    <div class="bg"></div>
-  </body>
+  <body></body>
 </html>
